<resources>
    <string name="app_name">同伴</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--common-->
    <string name="create">创建</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="cancel">取消</string>
    <string name="settings">设置</string>
    <string name="search">搜索</string>
    <string name="join">加入</string>
    <string name="joined">已加入</string>
    <string name="join_success">加入成功</string>
    <string name="recommend">推荐</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="digits">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM._-@#$%^*()?~</string>
    <string name="image_display">图片浏览</string>
    <string name="collect_success">收藏成功</string>
    <string name="un_collect">已取消收藏</string>
    <!--登录-->
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="contain_illegal_parameter">用户登录包含非法参数</string>
    <string name="username_or_pwd_empty">用户登录密码或账户名为空</string>
    <string name="use_phone_pwd_fail">使用手机号和密码登录失败</string>
    <string name="phone_error">手机号码不正确</string>
    <string name="pwd">密 码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="new_register">新用户注册</string>
    <!--注册-->
    <string name="register">注册</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="register_success">注册成功</string>
    <string name="verify_send_success">验证码已经发送到手机</string>
    <string name="verify_code_illegal">该验证码无效</string>
    <!-- 重置密码-->
    <string name="pwd_reset">重置密码</string>
    <string name="old_pwd_empty">旧密码不能为空</string>
    <string name="old_pwd_error">旧密码输入错误</string>
    <string name="pwd_reset_success">密码重置成功</string>
    <string name="old_pwd_equals_new_pwd">新密码和旧密码相同，请重新输入</string>
    <string name="twice_pwd_same">新密码和确认新密码不一致，请重新输入</string>
    <string name="pwd_least">密码最少为6位，请重新输入</string>
    <string name="pwd_contain_empty">密码包含空参数</string>
    <string name="pwd_reset_fail">重置密码失败</string>
    <string name="obtain_old_pwd_fail">获取用户旧密码失败</string>
    <!-- 找回密码-->
    <string name="find_pwd">找回密码</string>
    <string name="phone_num">手机号</string>
    <string name="input_register_phone_num">请输入注册时的手机号</string>
    <string name="submit">提交</string>
    <string name="your_phone_num">您的手机号是</string>
    <string name="verify_code">验证码</string>
    <string name="re_set_pwd">重置密码</string>
    <string name="hint_pwd">6-24位字母或数字</string>
    <!-- 发现-->
    <string name="discover">发现</string>
    <string name="view_details">查看详情</string>
    <string name="book_desc">【图书简介】</string>
    <string name="book_author">【作者】</string>
    <string name="recommend_cause">【推荐理由】</string>
    <string name="suitable_for">【适读人群】</string>
    <string name="publisher">【出版社】</string>
    <string name="isbn">【ISBN】</string>
    <!--话题-->
    <string name="topic">话题</string>
    <string name="group_settings">圈子信息</string>

    <!-- 圈子 -->
    <string name="group">圈子</string>
    <string name="chat">聊天</string>
    <!-- 圈子搜索-->
    <string name="search_group">圈子搜索</string>
    <!--创建圈子-->
    <string name="create_group">创建圈子</string>
    <string name="create_group_icon">添加圈子头像</string>
    <string name="create_age">出生年月(请选择宝宝出生日期)</string>
    <string name="create_school">所在学校(请选择宝宝所在学校)</string>
    <string name="create_life">圈子分类(请选择圈子类型)</string>
    <string name="choice_group_type">选择圈子类型</string>
    <string name="more_group_type">还可以创建</string>
    <string name="hint_group_name">圈子名称（如标题、人物、地点等）</string>
    <string name="hint_group_introduction">圈子简介，200字以内</string>
    <string name="hint_group_location">圈子位置</string>
    <string name="group_secret">允许搜索到本群</string>
    <string name="group_agreement">我同意《同伴圈子服务协议》</string>
    <string name="finish_create">完成创建</string>
    <string name="icon_clip">头像裁剪</string>
    <!-- 加入圈子-->
    <string name="join_group">加入圈子</string>
    <!-- 用户中心-->
    <string name="user_center">用户中心</string>
    <string name="fans">粉丝</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="my_group">我的圈子</string>
    <string name="my_collect">我的收藏</string>
    <string name="feedback">意见反馈</string>
    <string name="my_topic">我的话题</string>
    <string name="my_send_topic">我发起的</string>
    <string name="my_receive_topic">回复我的</string>
    <!-- 位置-->
    <string name="select_location">选择位置</string>
    <!--标签-->
    <string name="group_label">圈子标签</string>
    <string name="select_label">标签选择</string>
    <string name="select_label_max">最多选择三个标签</string>
    <!-- 发表话题-->
    <string name="create_topic">发表话题</string>
    <string name="topic_search">话题搜索</string>
    <string name="create_comment">发表评论</string>
    <string name="input_topic">输入标题（30字以内）</string>
    <string name="hint_topic_content">话题内容...</string>
    <!-- 首页搜索-->
    <string name="hot_type">热门分类</string>
    <string name="all_type">全部分类</string>
    <string name="multiple_product">专题</string>
    <string name="single_product">单品</string>


</resources>
