<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_phone_num"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/tv_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/your_phone_num"
            android:textColor="@color/normal_grey" />

        <TextView
            android:id="@+id/tv_phone_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_phone_text"
            android:gravity="center_vertical"
            android:text="1111111"
            android:textColor="@color/main_black"
            android:textSize="16sp" />

        <View
            style="@style/HorizontalLine"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_verify_code"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/rl_phone_num">

        <com.tongban.im.widget.view.ClearEditText
            android:id="@+id/et_verify_code"
            style="@style/ClearEditTextStyle"
            android:layout_toLeftOf="@+id/tv_verify_code"
            android:hint="@string/verify_code"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/get_verify_code"
            android:textColor="@color/selector_text_color" />

        <View
            style="@style/HorizontalLine"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/ll_reset_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/rl_verify_code">

        <TextView
            android:id="@+id/tv_reset_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/re_set_pwd"
            android:textColor="@color/normal_grey"/>

        <com.tongban.im.widget.view.ClearEditText
            android:id="@+id/et_set_pwd"
            style="@style/ClearEditTextStyle"
            android:inputType="textPassword"
            android:layout_toRightOf="@+id/tv_reset_pwd"
            android:digits="@string/digits"
            android:hint="@string/hint_pwd" />

        <View
            style="@style/HorizontalLine"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/selector_btn_bg_orange"
        android:enabled="false"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>
