<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/weak_grey">

    <!-- 手机号-->
    <RelativeLayout
        android:id="@+id/rl_phone_num"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/toolbar">

        <TextView
            android:id="@+id/tv_phone_text"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/phone_num"
            android:textColor="@color/main_black" />

        <com.tongban.corelib.widget.view.ClearEditText
            android:id="@+id/et_phone_num"
            style="@style/ClearEditTextStyle"
            android:layout_toRightOf="@+id/tv_phone_text"
            android:digits="@string/digits"
            android:inputType="number"
            android:maxLength="11" />

        <View
            style="@style/HorizontalLine"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <!--密码-->
    <RelativeLayout
        android:id="@+id/rl_pwd_parent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/rl_phone_num">

        <TextView
            android:id="@+id/tv_pwd_text"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/pwd"
            android:textColor="@color/main_black" />

        <com.tongban.corelib.widget.view.ClearEditText
            android:id="@+id/et_pwd"
            style="@style/ClearEditTextStyle"
            android:layout_toRightOf="@+id/tv_pwd_text"
            android:hint="6-24位"
            android:inputType="textPassword"
            android:maxLength="24"
            android:textColorHint="@color/normal_grey" />

        <View
            style="@style/HorizontalLine"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <!--验证码-->
    <RelativeLayout
        android:id="@+id/rl_verify_code"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/rl_pwd_parent"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_toLeftOf="@+id/btn_verify_code">

            <TextView
                android:id="@+id/tv_verify_text"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/verify_code"
                android:textColor="@color/main_black" />

            <com.tongban.corelib.widget.view.ClearEditText
                android:id="@+id/et_verify_code"
                style="@style/ClearEditTextStyle"
                android:layout_toRightOf="@+id/tv_verify_text"
                android:inputType="number"
                android:maxLength="6" />

        </RelativeLayout>


        <Button
            android:id="@+id/btn_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:clickable="true"
            android:enabled="false"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/get_verify_code"
            android:textColor="@color/selector_text_color" />

        <View
            style="@style/HorizontalLine"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>


    <CheckBox
        android:id="@+id/cb_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_verify_code"
        android:checked="true" />

    <TextView
        android:id="@+id/tv_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cb_agree"
        android:layout_alignTop="@+id/cb_agree"
        android:layout_below="@+id/rl_verify_code"
        android:layout_toRightOf="@+id/cb_agree"
        android:gravity="center"
        android:text="阅读并同意《用户协议》"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_register"
        style="@style/CommonButtonStyle"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:text="@string/register" />

</RelativeLayout>
