<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom_menu" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/bg_menu_bottom_light"
        android:layout_above="@+id/ll_bottom_menu"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/ll_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_menu_bottom_light"
        android:orientation="horizontal">


        <com.tongban.corelib.widget.view.ChangeColorView
            android:id="@+id/ccv_discover"
            style="@style/MainBottomMenu"
            app:changeColor="@color/theme_red"
            app:changeIcon="@mipmap/ic_menu_discover_normal"
            app:changeText="@string/discover"
            app:changeTextSize="12sp"
            app:defaultColor="@color/normal_grey" />


        <com.tongban.corelib.widget.view.ChangeColorView
            android:id="@+id/ccv_topic"
            style="@style/MainBottomMenu"
            app:changeColor="@color/theme_red"
            app:changeIcon="@mipmap/ic_menu_topic_normal"
            app:changeText="@string/topic"
            app:changeTextSize="12sp"
            app:defaultColor="@color/normal_grey" />

        <com.tongban.corelib.widget.view.ChangeColorView
            android:id="@+id/ccv_circle"
            style="@style/MainBottomMenu"
            app:changeColor="@color/theme_red"
            app:changeIcon="@mipmap/ic_menu_circle_normal"
            app:changeText="@string/group"
            app:changeTextSize="12sp"
            app:defaultColor="@color/normal_grey" />
    </LinearLayout>


</RelativeLayout>
