<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar" />

    <LinearLayout
        android:id="@+id/ll_tab_result"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_multiple_product"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.tongban.corelib.widget.view.ChangeColorView
                android:id="@+id/ccv_multiple_product"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:changeColor="@color/theme_red"
                app:changeText="@string/multiple_product"
                app:defaultColor="@color/normal_grey" />

            <TextView
                android:id="@+id/tv_multiple_product_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/ccv_multiple_product"
                android:gravity="center_vertical"
                android:paddingTop="3dp"
                android:text="123"
                android:textColor="@color/normal_grey"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_single_product"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.tongban.corelib.widget.view.ChangeColorView
                android:id="@+id/ccv_single_product"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:changeColor="@color/main_deep_orange"
                app:changeText="@string/single_product"
                app:defaultColor="@color/normal_dark_grey" />

            <TextView
                android:id="@+id/tv_single_product_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/ccv_single_product"
                android:gravity="center_vertical"
                android:paddingTop="3dp"
                android:text="23"
                android:textColor="@color/normal_grey"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_topic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.tongban.corelib.widget.view.ChangeColorView
                android:id="@+id/ccv_topic"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:changeColor="@color/main_deep_orange"
                app:changeText="@string/topic"
                app:defaultColor="@color/normal_dark_grey" />

            <TextView
                android:id="@+id/tv_topic_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/ccv_topic"
                android:gravity="center_vertical"
                android:paddingTop="3dp"
                android:text="12"
                android:textColor="@color/normal_grey"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/v_indicator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_deep_orange" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar" />

</LinearLayout>

