<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/fl_user_head"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="72dp">
        <!-- 头像-->
        <com.tongban.corelib.widget.view.CircleImageView
            android:id="@+id/iv_user_portrait"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop" />

        <CheckBox
            android:id="@+id/chb_focus"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="bottom|right"
            android:background="@drawable/selector_user_focus"
            android:button="@null"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_set_child_info"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_relationship"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/fl_user_head"
        android:layout_alignTop="@+id/fl_user_head"
        android:gravity="center"
        android:padding="8dp"
        android:text="请设置宝宝信息"
        android:textColor="@drawable/selector_usercenter_text_color"
        android:visibility="gone" />

    <!-- 用户信息布局-->
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_relationship"
        android:layout_alignTop="@+id/fl_user_head"
        android:gravity="center_vertical" />

    <com.tongban.corelib.widget.view.indicator.CirclePageIndicator
        android:id="@+id/lpi_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vp_container" />


    <ImageView
        android:id="@+id/iv_private_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ll_user_info"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/selector_chat_icon"
        android:visibility="gone" />

    <!--底部粉丝布局-->
    <LinearLayout
        android:id="@+id/ll_relationship"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:background="#50ffffff"
        android:orientation="horizontal">

        <!-- 粉丝、关注、话题数量布局-->
        <LinearLayout
            android:id="@+id/rl_fans_num"
            style="@style/UserInfoAttrParent">


            <!-- 粉丝数量布局-->
            <RelativeLayout style="@style/UserInfoAttrLayout">
                <!-- 粉丝数量文本-->
                <TextView
                    android:id="@+id/tv_fans_num"
                    style="@style/UserInfoAttrTopText"
                    android:text="0" />
                <!-- 粉丝badge-->
                <View
                    android:id="@+id/badge_fans"
                    style="@style/UserInfoBadge"
                    android:layout_toRightOf="@+id/tv_fans_num"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_fans"
                style="@style/UserInfoAttrBottomText"
                android:text="@string/fans" />

        </LinearLayout>

        <!--底部关注布局-->
        <LinearLayout
            android:id="@+id/rl_follow_num"
            style="@style/UserInfoAttrParent">

            <!-- 关注数量布局-->
            <RelativeLayout style="@style/UserInfoAttrLayout">
                <!-- 关注数量-->
                <TextView
                    android:id="@+id/tv_follow_num"
                    style="@style/UserInfoAttrTopText"
                    android:text="0" />
                <!-- 关注badge-->
                <View
                    android:id="@+id/badge_follow"
                    style="@style/UserInfoBadge"
                    android:layout_toRightOf="@+id/tv_follow_num"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_follow"
                style="@style/UserInfoAttrBottomText"
                android:text="@string/follow" />

        </LinearLayout>

        <!-- 圈子布局-->
        <LinearLayout
            android:id="@+id/rl_group_num"
            style="@style/UserInfoAttrParent">

            <!-- 圈子数量布局-->
            <RelativeLayout style="@style/UserInfoAttrLayout">
                <!-- 圈子数量-->
                <TextView
                    android:id="@+id/tv_group_num"
                    style="@style/UserInfoAttrTopText"
                    android:text="0" />
                <!-- 圈子badge-->
                <View
                    android:id="@+id/badge_topic"
                    style="@style/UserInfoBadge"
                    android:layout_toRightOf="@+id/tv_group_num"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_group"
                style="@style/UserInfoAttrBottomText"
                android:text="@string/group" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>